--- a/LettersToSanta/TextExtractionFunction/TextExtractionFunction.csproj
+++ b/LettersToSanta/TextExtractionFunction/TextExtractionFunction.csproj
@@ -15,6 +15,10 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.3" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CognitiveServicesLibrary\CognitiveServicesLibrary.csproj" />
+    <ProjectReference Include="..\DatabaseLibrary\DatabaseLibrary.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
