Added dashboard application to solution.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /LettersToSanta/CognitiveServicesLibrary/obj
 /LettersToSanta/DatabaseLibrary/bin/Debug/net6.0
 /LettersToSanta/DatabaseLibrary/obj
+/LettersToSanta/LetterDashboard/bin/Debug/net6.0
+/LettersToSanta/LetterDashboard/obj
